# simple-react-agent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: chat_loop.py  lmstudio_example.py  next_demo.py  react_chat.py  react_demo.py  react_minimal.py
src/simple_or_agent/: README.md  __init__.py  advanced_agent.py  lmstudio_client.py  memory.py  next_agent.py  openrouter_client.py  orchestrator.py  react_agent.py  simple_agent.py
src/simple_or_agent/tools/: __init__.py  maths.py  mongo.py  searxng.py  toolkits.py  web_search.py  web_search_v2.py  wiki.py
tests/: __init__.py  manual_test_extract.py  test_ai_agent_integration.py  test_maths_tools.py  test_mongo_tools.py  test_runner.py  test_searxng_tools.py  test_web_search_tools.py  test_wiki_tools.py
